--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ joblib==0.17.0
 scipy==1.5.3
 sklearn==0.0
 gunicorn==20.0.4
+courlan==0.2.3
+google==3.0.0
+htmldate==0.7.2
+joblib==0.17.0
+jusText==2.2.0
+readability-lxml==0.8.1
